[Yashpal] Minor updates

--- a/widgets/biginnew/SMSMagicForBigin/app/settings.html
+++ b/widgets/biginnew/SMSMagicForBigin/app/settings.html
@@ -28,12 +28,11 @@
       <div class="tab-pane fade show active" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
         <div class="card rounded-top-0 border-top-0">
           <div class="card-header">
-            <strong>SMS Magic Data Center</strong>
+            <strong>Data Center & Phone Field</strong>
           </div>
           <div class="card-body">
-            <p class="card-text">SMS Magic has 3 data centers: <strong>US</strong>, <strong>Europe</strong> and <strong>Australia</strong>.
-              We provide multi Data centers to meet the compliances such as GDPR.
-              Please select the data center to which you account with SMS Magic belong.
+            <p class="card-text">
+              Please select the <strong>SMS Magic data center</strong> to which you account with SMS Magic belong.
               The SMS Magic Topping will use corresponding data center to route your messages.
             </p>
             <div class="input-group mb-3">
@@ -56,7 +55,7 @@
               <button id="phoneFieldseleter" class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
               <ul id="phone-fields" class="dropdown-menu dropdown-menu-end"></ul>
             </div>
-            <div class="text-end mt-4 pe-2">
+            <div class="text-end mt-2 pe-2">
               <button id="save-settings" disabled="true" type="button" class="btn btn-outline-secondary rounded-pill">Save</button>
             </div>
           </div>
