--- a/widgets/conversebox/app/widget.html
+++ b/widgets/conversebox/app/widget.html
@@ -10,18 +10,14 @@
   <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/4.0.0/css/jasny-bootstrap.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/sendsms.css" rel="stylesheet">
-
+  <link href="css/style.css" rel="stylesheet">
   <script src="//code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="//stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <script src="//cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/4.0.0/js/jasny-bootstrap.min.js"></script>
-
   <script src="js/jquery-dateformat.min.js"></script>
   <script src="js/ZohoEmbededAppSDK.min.js"></script>
-  <script src="js/utils.js"></script>
-  <script src="js/bulksms.js"></script>
-  <script src="js/yamessenger.js"></script>
+  <script src="js/custom.js"></script>
 </head>
 
 <body class="loading">
